[package]
name = "rust_invaders"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8.4"

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = {version = "0.5", default-features = true, features = ["bevy_wgpu", "bevy_winit", "render", "x11"]}

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render"]}
bevy_webgl2 = "0.5"

[lib]
name = "rust_invaders_lib"
crate-type = ["cdylib", "rlib"]